--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,25 +1,27 @@
-name: TenAPI Docs
+name: Deploy GitHub Pages
+
+# 触发条件：在 push 到 master 分支后
 on:
   push:
     branches:
       - master
+
+# 任务
 jobs:
   build-and-deploy:
     runs-on: ubuntu-latest
     steps:
-      - name: Checkout 🛎️
-        uses: actions/checkout@v2.3.1
-
-      - name: Install and Build 🔧 
-        run: |
-          npm install
-          npm run docs:build
-        env:
-          NODE_OPTIONS: '--max_old_space_size=4096'
-
-      - name: Deploy 🚀
-        uses: JamesIves/github-pages-deploy-action@4.1.3
+      - name: Checkout
+        uses: actions/checkout@v2
         with:
+          persist-credentials: false
+
+      - name: Build
+        run: npm install && npm run docs:build
+
+      - name: Deploy
+        uses: JamesIves/github-pages-deploy-action@releases/v3
+        with:
+          ACCESS_TOKEN: ${{ secrets.ACCESS_TOKEN }}
           BRANCH: gh-pages
           FOLDER: docs/.vuepress/dist
-          ACCESS_TOKEN: ${{ secrets.ACCESS_TOKEN }}
