--- a/package.json
+++ b/package.json
@@ -1,6 +1,15 @@
 {
+  "name": "gh-pages-action-demo",
+  "version": "1.0.0",
+  "main": "index.js",
+  "repository": "git@github.com:LasyIsLazy/gh-pages-action-demo.git",
+  "author": "Lasy <1255352506@qq.com>",
+  "license": "MIT",
   "scripts": {
     "docs:dev": "vuepress dev docs",
     "docs:build": "vuepress build docs"
+  },
+  "devDependencies": {
+    "vuepress": "^1.3.0"
   }
 }
